--- a/ecommerceApi.csproj
+++ b/ecommerceApi.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bcrypt.net-next" Version="4.0.3" />
+    <PackageReference Include="FluentValidation" Version="11.4.0" />
+    <PackageReference Include="fluentvalidation.aspnetcore" Version="11.2.2" />
+    <PackageReference Include="microsoft.entityframeworkcore" Version="7.0.2" />
+    <PackageReference Include="microsoft.identitymodel.tokens" Version="6.26.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="system.identitymodel.tokens.jwt" Version="6.26.1" />
   </ItemGroup>
 
 </Project>
