--- a/ecommerceApi.csproj
+++ b/ecommerceApi.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="fluentvalidation.aspnetcore" Version="11.2.2" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="7.0.2" />
+    <PackageReference Include="microsoft.entityframeworkcore.design" Version="7.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="microsoft.identitymodel.tokens" Version="6.26.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
