crud functionality to categories

--- a/ecommerceApi.csproj
+++ b/ecommerceApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="automapper" Version="12.0.1" />
     <PackageReference Include="bcrypt.net-next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="fluentvalidation.aspnetcore" Version="11.2.2" />
