--- a/ecommerceApi.csproj
+++ b/ecommerceApi.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="system.identitymodel.tokens.jwt" Version="6.26.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6" />
   </ItemGroup>
 
 </Project>
